Update code without secrets
